# policr-mini

./: .credo.exs  .dialyzer_ignore.exs  .drone.yml  .env.example  .formatter.exs  .gitignore  .mise.toml  .prettierignore  .prettierrc  .tool-versions  .woodpecker.yml  Dockerfile  Dockerfile.amd64ci  Dockerfile.ci  Dockerfile.dockerignore  Dockerfile.multiarch  Dockerfile.multiarch.dockerignore  LICENSE  README.md  UPGRADE.md  dev.docker-compose.yml  dev.env.example  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  dprint.jsonc  justfile  metrics.code.cloc.txt  mix.exs  package-lock.json  rust-toolchain  shell.nix
.ci/: arm64.woodpecker.yml
.github/workflows/: publish.yml
.nix/: asdf.nix
admin/: .gitignore  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mjs
admin/src/: App.tsx  api.ts  main.css  main.tsx  tailwind.css  utils.ts
admin/types/: file-imports.d.ts  global.d.ts  input-data.d.ts  server-data.d.ts
assets/: .babelrc  babel.plugin.js  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  webpack.config.js
assets/js/: user.js
assets/src/: admin.js  user.js
assets/styles/: admin.scss  github-markdown.css  user.scss
benches/: capinde_classic.exs  capinde_grid.exs  capinde_image.exs  entry_message_ids.exs  rewrite_image.exs
config/: .gitignore  config.exs  dev.exs  prod.exs  releases.exs  runtime.exs  test.exs
console/: eslint.config.mjs  package.json  tsconfig.json  vite.config.mjs
console/public/: robots.txt
console/src/: App.tsx  api.ts  main.css  main.tsx  tailwind.css
console/types/: global.d.ts  input-data.d.ts  server-data.d.ts
docs/: deployment_guide.md  upgrade_postgres_to_v16.md  upgrade_to_postgres_v16.md
images/: .gitignore  metadata.json
lib/: abilities.ex  capinde.ex  policr_mini.ex  policr_mini_bot.ex  policr_mini_web.ex
lib/capinde/: application.ex  error.ex
lib/policr_mini/: accounts.ex  application.ex  bot.ex  buildtime_runtime.ex  cache.ex  capinde.ex  chats.ex  context.ex  helper.ex  (+27 more)
native/imgcore/: Cargo.toml
native/imgcore/src/: lib.rs
native/imgkit/: .gitignore  Cargo.toml
native/imgkit/src/: lib.rs
native/ziputil/: Cargo.toml
native/ziputil/src/: lib.rs
priv/: banner.txt
rel/: vm.args.eex
seeds/: console.exs  dashboard.exs  management.exs
test/: capinde_test.exs  policr_mini_bot_test.exs  policr_mini_test.exs  policr_mini_web_test.exs  test_helper.exs
webapps/: .eslintrc  babel-plugin-macros.config.js  dprint.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.mjs
(+721 files in other folders)
