[package]
name = "imgcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "imgcore"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
magick_rust = "0.19.1"
rand = "0.8.5"
rustler = "0.30.0"
thiserror = "1.0.50"
uuid = { version = "1.5.0", features = ["v4"] }
