[package]
name = "imgkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "imgkit"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
magick_rust = { git = "https://github.com/Hentioe/magick-rust.git", branch = "master" }
rand = "0.8.5"
rustler = "0.30.0"
thiserror = "1.0.50"
uuid = { version = "1.5.0", features = ["v4"] }

[profile.release]
strip = "debuginfo"
