[package]
name = "ziputil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ziputil"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
rustler = "0.30.0"
thiserror = "1.0.50"
zip = "0.6.6"
