[package]
name = "ziputil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ziputil"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
rustler = "0.34.0"
thiserror = "2.0.12"
zip = "4.2.0"

[profile.release]
strip = "debuginfo"
